# MoodPalette

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tests.py
data/: palettes.jsonl
moodpalette/: clip_embedder.py  embedder.py  emotion.py  export.py  generator.py  palette.py  semantic_search.py  server.py  vectorizer.py
static/: app.js  index.html  style.css
